--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,9 @@
         <version>0.9.2-SNAPSHOT</version>
     </parent>
 
-    <artifactId>adito-community-radius</artifactId>
+    <artifactId>adito-auth-radius</artifactId>
+    <version>1.0.14-SNAPSHOT</version>
+    
     <packaging>adito-extension</packaging>
 
     <name>adito : extension : radius</name>
