--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     
     <packaging>adito-extension</packaging>
 
-    <name>adito : extension : radius</name>
+    <name>adito : auth : radius</name>
 
     <dependencies>
         <dependency>
